--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
-  <title>5chan - Simple Imageboard</title>
-  <style>
-    body { font-family: Arial; max-width: 700px; margin: auto; }
-    img { max-width: 200px; margin-top: 5px; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>5chan</title>
 </head>
 <body>
-  <h1>5chan - Create a Thread</h1>
-  <form action="/post_thread" method="POST" enctype="multipart/form-data">
-    <input name="title" placeholder="Title" required><br><br>
-    <textarea name="message" placeholder="Message..." required></textarea><br><br>
-    <input type="file" name="image"><br><br>
-    <button type="submit">Post Thread</button>
-  </form>
+    <h1>2bchan</h1>
+    <h2>Boards</h2>
+    <ul>
+        <li><a href="/board/tech">/b/</a></li>
+        <li><a href="/board/music">/2/</a></li>
+    </ul>
 
-  <hr>
-  <h2>Threads</h2>
-  {% for thread in threads %}
-    <div>
-      <h3><a href="/thread/{{ thread.id }}">{{ thread.title }}</a></h3>
-      <p>{{ thread.message }}</p>
-      {% if thread.image %}
-        <img src="{{ url_for('uploaded_file', filename=thread.image) }}">
-      {% endif %}
-      <hr>
-    </div>
-  {% endfor %}
+    <h3>Create a New Thread</h3>
+    <form action="/create-thread" method="POST" enctype="multipart/form-data">
+        <label for="title">Thread Title:</label><br>
+        <input type="text" name="title" id="title" required><br><br>
+
+        <label for="content">Content:</label><br>
+        <textarea name="content" id="content" rows="5" cols="50" required></textarea><br><br>
+
+        <label for="file">Upload an Image (Required):</label><br>
+        <input type="file" name="file" id="file" accept="image/*" required><br><br>
+
+        <button type="submit">Create Thread</button>
+    </form>
+
+    <h3>Existing Threads</h3>
+    <ul>
+        {% for thread in threads %}
+        <li><a href="/thread/{{ thread.id }}">{{ thread.title }}</a></li>
+        {% endfor %}
+    </ul>
 </body>
-</html>
